ΜΑΘΗΜΑΤΑ/ΗΥ-340/PROJECTS/Compiler_Exec/examples/phase_2/Errors/Error0.asc
//

if(x=1){
       ::Global = 7;	//ERROR : No global variable '::Global' exists
}
